game and backend API

--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DTD200</title>
-    <link rel="stylesheet" href="./css/main.css" />
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Cumpleaños</title>
+	<link rel="shortcut icon" href="./img/icon.png" />
+	<link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/kaboom.js" defer></script>
+    <script src="./js/levels.js" defer></script>
+    <script src="./js/game.js" defer></script>
     <script src="./js/main.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <div class="screen-container">
-            <canvas class="screen" width="1920" height="1080" data-screen></canvas>
+	<div class="container">
+        <div class="screen-container" data-screen-container>
+            <canvas class="screen" data-screen></canvas>
         </div>
-    </div>
+	</div>
 </body>
 </html>
