--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
 	<link rel="shortcut icon" href="./img/icon.png" />
 	<link rel="stylesheet" href="./css/styles.css" />
     <script src="./js/kaboom.js" defer></script>
+	<script src="./js/common.js" defer></script>
     <script src="./js/levels.js" defer></script>
     <script src="./js/game.js" defer></script>
     <script src="./js/main.js" defer></script>
