--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
 	<title>Juegazo200</title>
 	<link rel="shortcut icon" href="./img/icon.png" />
 	<link rel="stylesheet" href="./css/styles.css" />
+	<!-- SCRIPTS -->
     <script src="./js/kaboom.js" defer></script>
 	<script src="./js/common.js" defer></script>
     <script src="./js/levels.js" defer></script>
