--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,21 @@
         <div class="screen-container" data-screen-container>
             <canvas class="screen" data-screen></canvas>
         </div>
+		<div class="form-container" data-load-account>
+			<form class="form">
+				<header class="form-header">
+					<h2>Ingrese los datos de su cuenta</h2>
+				</header>
+				<main class="form-main">
+					<div class="form-input-container">
+						<label for="load-form-username">Nombre de usuario</label>
+						<input class="form-input" id="load-form-username" name="load-form-username" type="text" />
+					</div>
+				</main>
+				<footer class="form-footer">
+				</footer>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
