--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,7 @@
 				</main>
 				<footer class="form-footer">
 					<button id="load-account-submit" class="form-submit-button">Cargar datos</button>
+					<button class="form-submit-button form-submit-button-close">Cerrar</button>
 				</footer>
 			</div>
 		</div>
