--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 	<!-- SCRIPTS -->
     <script src="./js/kaboom.js" defer></script>
 	<script src="./js/common.js" defer></script>
+	<script src="./js/user.js" defer></script>
     <script src="./js/levels.js" defer></script>
     <script src="./js/game.js" defer></script>
     <script src="./js/main.js" defer></script>
